# axiom-ebpf

./: CONTRIBUTING.md  Cargo.toml  PROPOSAL.md  README.md  build.rs  qemu_output.txt  qemu_output_asm_debug.txt  qemu_output_debug.txt  qemu_output_debug_2.txt  qemu_output_debug_3.txt  qemu_output_final.txt  qemu_output_reordered.txt  qemu_output_verify.txt  qemu_output_verify_2.txt  qemu_output_virt.txt
.github/: CLAUDE.md  copilot-instructions.md
.github/workflows/: bpf-profiles.yml  build.yml
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
docs/: WORK_REMAINING.md  implementation.md  proposal.md  task-branch.md  tasks.md
kernel/: Cargo.toml  build.rs  linker-aarch64.ld  linker-virt.ld
kernel/crates/kernel_bpf/: Cargo.toml  README.md
kernel/crates/kernel_elfloader/: Cargo.toml
kernel/crates/kernel_elfloader/src/: lib.rs
kernel/crates/kernel_syscall/: Cargo.toml
kernel/crates/kernel_syscall/src/: fcntl.rs  lib.rs  mman.rs  ptr.rs  stat.rs  unistd.rs
kernel/crates/kernel_syscall/src/access/: file.rs
kernel/demos/riscv/: Cargo.toml  README.md
kernel/demos/riscv/src/: main.rs
kernel/src/: acpi.rs  apic.rs  backtrace.rs  hpet.rs  lib.rs  limine.rs  main.rs  main_riscv.rs  main_riscv_minimal.rs  serial.rs  sse.rs
kernel/src/arch/: idt.rs  mod.rs  (+1 more)
scripts/: build-riscv.sh  build-rpi5.sh  deploy-rpi5.sh  run-riscv.sh  run-virt.sh
src/: main.rs
userspace/gpio_demo/: Cargo.toml
userspace/init/: Cargo.toml
userspace/rk_bridge/: Cargo.toml
userspace/syscall_demo/: Cargo.toml
(+134 files in other folders)
