[package]
name = "kernel_elfloader"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel_memapi = { path = "../kernel_memapi" }

itertools.workspace = true
log.workspace = true
thiserror.workspace = true
zerocopy.workspace = true

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64.workspace = true
